--- a/packages/element-plus-adapter/package.json
+++ b/packages/element-plus-adapter/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.2.0-beta.27",
+  "version": "1.2.0",
   "name": "@tmagic/element-plus-adapter",
   "type": "module",
   "sideEffects": [
