--- a/packages/tdesign-vue-next-adapter/package.json
+++ b/packages/tdesign-vue-next-adapter/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.2.0-beta.27",
+  "version": "1.2.0",
   "name": "@tmagic/tdesign-vue-next-adapter",
   "type": "module",
   "sideEffects": [
