--- a/runtime/vue2/package.json
+++ b/runtime/vue2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime-vue2",
-  "version": "1.2.0-beta.27",
+  "version": "1.2.0",
   "type": "module",
   "private": true,
   "scripts": {
@@ -21,12 +21,12 @@
     "build:event:admin": "vite build --config build.vite.config.ts --mode event:admin"
   },
   "dependencies": {
-    "@tmagic/cli": "1.2.0-beta.27",
-    "@tmagic/core": "1.2.0-beta.27",
-    "@tmagic/ui-vue2": "1.2.0-beta.27",
-    "@tmagic/schema": "1.2.0-beta.27",
-    "@tmagic/stage": "1.2.0-beta.27",
-    "@tmagic/utils": "1.2.0-beta.27",
+    "@tmagic/cli": "1.2.0",
+    "@tmagic/core": "1.2.0",
+    "@tmagic/ui-vue2": "1.2.0",
+    "@tmagic/schema": "1.2.0",
+    "@tmagic/stage": "1.2.0",
+    "@tmagic/utils": "1.2.0",
     "axios": "^0.25.0",
     "terser": "^5.14.2",
     "vue": "^2.7.4"
