--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,7 +38,8 @@
   "dependencies": {
     "@tmagic/schema": "1.2.2",
     "events": "^3.3.0",
-    "lodash-es": "^4.17.21"
+    "lodash-es": "^4.17.21",
+    "axios": "^1.3.3"
   },
   "devDependencies": {
     "@types/events": "^3.0.0",
