--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,10 +36,11 @@
     "vue"
   ],
   "dependencies": {
+    "@formily/reactive": "^2.2.19",
     "@tmagic/schema": "1.2.2",
+    "axios": "^1.3.3",
     "events": "^3.3.0",
-    "lodash-es": "^4.17.21",
-    "axios": "^1.3.3"
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@types/events": "^3.0.0",
