--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -14,6 +14,7 @@
     "react:build": "tsc && vite build"
   },
   "dependencies": {
+    "@formily/reactive": "^2.2.19",
     "@tmagic/core": "1.2.2",
     "@tmagic/schema": "1.2.2",
     "qrcode": "^1.5.0",
