--- a/magic-admin/web/package.json
+++ b/magic-admin/web/package.json
@@ -3,25 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "node --max_old_space_size=4096 node_modules/@vue/cli-service/bin/vue-cli-service.js serve --open",
+    "serve": "node --max_old_space_size=4096 node_modules/@vue/cli-service/bin/vue-cli-service.js serve",
     "build": "vue-cli-service build",
     "test": "vue-cli-service test:unit --maxWorkers=8 --coverage",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@tmagic/design": "1.2.0",
-    "@tmagic/editor": "1.2.0",
-    "@tmagic/element-plus-adapter": "1.2.0",
-    "@tmagic/form": "1.2.0",
-    "@tmagic/schema": "1.2.0",
-    "@tmagic/stage": "1.2.0",
-    "@tmagic/table": "1.2.0",
-    "@tmagic/utils": "1.2.0",
+    "@tmagic/design": "^1.2.8",
+    "@tmagic/editor": "^1.2.8",
+    "@tmagic/element-plus-adapter": "^1.2.8",
+    "@tmagic/form": "^1.2.8",
+    "@tmagic/schema": "^1.2.8",
+    "@tmagic/stage": "^1.2.8",
+    "@tmagic/table": "^1.2.8",
+    "@tmagic/utils": "^1.2.8",
     "axios": "^0.27.2",
     "axios-jsonp": "^1.0.4",
     "core-js": "^3.20.0",
     "element-plus": "^2.2.32",
     "js-cookie": "^3.0.0",
+    "monaco-editor": "^0.36.1",
     "serialize-javascript": "^6.0.0",
     "vue": "^3.2.26",
     "vue-router": "^4.0.3"
