--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "version": "1.2.13",
   "name": "tmagic",
   "private": true,
-  "packageManager": "pnpm@7.1.9",
+  "packageManager": "pnpm@8.2.0",
   "scripts": {
     "bootstrap": "pnpm i && pnpm build",
     "clean:top": "rimraf */**/dist */**/types */dist coverage dwt*",
@@ -31,14 +31,10 @@
     "release": "node scripts/release.js"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=16"
   },
   "workspaces": [
-    "packages/code-editor",
-    "packages/editor",
-    "packages/form",
-    "packages/stage",
-    "packages/utils"
+    "packages/*"
   ],
   "repository": {
     "type": "git",
@@ -49,11 +45,11 @@
     "@babel/core": "^7.18.0",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
-    "@types/node": "^15.12.4",
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
-    "@typescript-eslint/parser": "^4.28.0",
-    "@vitejs/plugin-vue": "^3.1.0",
-    "@vitest/coverage-c8": "^0.23.4",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "@vitejs/plugin-vue": "^4.1.0",
+    "@vitest/coverage-c8": "^0.30.0",
     "c8": "^7.11.3",
     "chalk": "^4.1.0",
     "commitizen": "^4.2.4",
@@ -61,28 +57,28 @@
     "cz-conventional-changelog": "^3.3.0",
     "element-plus": "^2.2.32",
     "enquirer": "^2.3.6",
-    "eslint": "^7.29.0",
+    "eslint": "^8.38.0",
     "eslint-config-tencent": "^1.0.4",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-vue": "^7.11.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-vue": "^9.10.0",
     "execa": "^4.0.2",
     "highlight.js": "^11.7.0",
     "husky": "^7.0.0",
     "jsdom": "^19.0.0",
     "lint-staged": "^11.0.1",
     "minimist": "^1.2.6",
-    "prettier": "^2.3.1",
+    "prettier": "^2.8.7",
     "recast": "^0.20.4",
     "rimraf": "^3.0.2",
     "semver": "^7.3.7",
     "serialize-javascript": "^6.0.0",
     "shx": "^0.3.4",
-    "typescript": "^4.7.4",
-    "vite": "^3.1.3",
+    "typescript": "^5.0.4",
+    "vite": "^4.2.1",
     "vitepress": "1.0.0-alpha.29",
-    "vitest": "^0.23.4",
+    "vitest": "^0.30.0",
     "vue": "^3.2.37"
   },
   "config": {
