--- a/playground/package.json
+++ b/playground/package.json
@@ -23,22 +23,23 @@
     "element-plus": "^2.2.32",
     "monaco-editor": "^0.34.0",
     "serialize-javascript": "^6.0.0",
-    "terser": "^5.14.2",
     "vue": "^3.2.37",
     "vue-router": "^4.0.10"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
     "@types/node": "^15.12.4",
     "@types/serialize-javascript": "^5.0.1",
-    "@vitejs/plugin-legacy": "^2.2.0",
-    "@vitejs/plugin-vue": "^3.1.0",
-    "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "@vitejs/plugin-legacy": "^4.0.2",
+    "@vitejs/plugin-vue": "^4.1.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/compiler-sfc": "^3.2.37",
     "sass": "^1.35.1",
-    "typescript": "^4.7.4",
+    "terser": "^5.14.2",
+    "typescript": "^5.0.4",
     "unplugin-auto-import": "^0.12.0",
     "unplugin-vue-components": "^0.22.11",
-    "vite": "^3.1.3",
-    "vue-tsc": "^1.0.11"
+    "vite": "^4.2.1",
+    "vue-tsc": "^1.2.0"
   }
 }
