--- a/runtime/react/package.json
+++ b/runtime/react/package.json
@@ -37,12 +37,13 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
-    "@vitejs/plugin-legacy": "^2.2.0",
+    "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "recast": "^0.20.4",
-    "typescript": "^4.7.4",
-    "vite": "^3.1.3"
+    "typescript": "^5.0.4",
+    "vite": "^4.2.1"
   }
 }
