--- a/runtime/vue2/package.json
+++ b/runtime/vue2/package.json
@@ -32,14 +32,15 @@
     "vue": "^2.7.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
     "@types/events": "^3.0.0",
     "axios": "^0.27.2",
     "recast": "^0.20.4",
     "rollup": "^2.25.0",
     "rollup-plugin-external-globals": "^0.6.1",
     "sass": "^1.35.1",
-    "vite": "^3.1.3",
-    "@vitejs/plugin-legacy": "^2.2.0",
+    "vite": "^4.2.1",
+    "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-vue2": "^1.1.2",
     "vue-template-compiler": "^2.7.4"
   }
