--- a/packages/data-source/package.json
+++ b/packages/data-source/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.2.15",
+  "version": "1.3.0-alpha.3",
   "name": "@tmagic/data-source",
   "type": "module",
   "sideEffects": [
@@ -32,8 +32,8 @@
     "data-source"
   ],
   "dependencies": {
-    "@tmagic/utils": "1.2.15",
-    "@tmagic/schema": "1.2.15",
+    "@tmagic/utils": "1.3.0-alpha.3",
+    "@tmagic/schema": "1.3.0-alpha.3",
     "events": "^3.3.0"
   },
   "devDependencies": {
