--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.2.15",
+  "version": "1.3.0-alpha.3",
   "name": "@tmagic/editor",
   "type": "module",
   "sideEffects": [
@@ -46,13 +46,13 @@
   "dependencies": {
     "@babel/core": "^7.18.0",
     "@element-plus/icons-vue": "^2.0.9",
-    "@tmagic/core": "1.2.15",
-    "@tmagic/design": "1.2.15",
-    "@tmagic/form": "1.2.15",
-    "@tmagic/schema": "1.2.15",
-    "@tmagic/stage": "1.2.15",
-    "@tmagic/table": "1.2.15",
-    "@tmagic/utils": "1.2.15",
+    "@tmagic/core": "1.3.0-alpha.3",
+    "@tmagic/design": "1.3.0-alpha.3",
+    "@tmagic/form": "1.3.0-alpha.3",
+    "@tmagic/schema": "1.3.0-alpha.3",
+    "@tmagic/stage": "1.3.0-alpha.3",
+    "@tmagic/table": "1.3.0-alpha.3",
+    "@tmagic/utils": "1.3.0-alpha.3",
     "buffer": "^6.0.3",
     "color": "^3.1.3",
     "events": "^3.3.0",
@@ -64,8 +64,8 @@
     "vue": "^3.3.4"
   },
   "peerDependencies": {
-    "@tmagic/design": "1.2.15",
-    "@tmagic/form": "1.2.15",
+    "@tmagic/design": "1.3.0-alpha.3",
+    "@tmagic/form": "1.3.0-alpha.3",
     "monaco-editor": "^0.34.0",
     "vue": "^3.3.4"
   },
