--- a/packages/table/package.json
+++ b/packages/table/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.2.15",
+  "version": "1.3.0-alpha.3",
   "name": "@tmagic/table",
   "type": "module",
   "sideEffects": [
@@ -33,14 +33,14 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "dependencies": {
-    "@tmagic/design": "1.2.15",
-    "@tmagic/form": "1.2.15",
-    "@tmagic/utils": "1.2.15",
+    "@tmagic/design": "1.3.0-alpha.3",
+    "@tmagic/form": "1.3.0-alpha.3",
+    "@tmagic/utils": "1.3.0-alpha.3",
     "lodash-es": "^4.17.21",
     "vue": "^3.3.4"
   },
   "peerDependencies": {
-    "@tmagic/form": "1.2.15",
+    "@tmagic/form": "1.3.0-alpha.3",
     "vue": "^3.3.4"
   },
   "devDependencies": {
