--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tmagic-playground",
-  "version": "1.2.15",
+  "version": "1.3.0-alpha.3",
   "type": "module",
   "private": true,
   "scripts": {
@@ -13,14 +13,14 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.9",
-    "@tmagic/core": "1.2.15",
-    "@tmagic/design": "1.2.15",
-    "@tmagic/editor": "1.2.15",
-    "@tmagic/element-plus-adapter": "1.2.15",
-    "@tmagic/form": "1.2.15",
-    "@tmagic/schema": "1.2.15",
-    "@tmagic/stage": "1.2.15",
-    "@tmagic/utils": "1.2.15",
+    "@tmagic/core": "1.3.0-alpha.3",
+    "@tmagic/design": "1.3.0-alpha.3",
+    "@tmagic/editor": "1.3.0-alpha.3",
+    "@tmagic/element-plus-adapter": "1.3.0-alpha.3",
+    "@tmagic/form": "1.3.0-alpha.3",
+    "@tmagic/schema": "1.3.0-alpha.3",
+    "@tmagic/stage": "1.3.0-alpha.3",
+    "@tmagic/utils": "1.3.0-alpha.3",
     "element-plus": "^2.2.32",
     "monaco-editor": "^0.34.0",
     "serialize-javascript": "^6.0.0",
