--- a/packages/data-source/package.json
+++ b/packages/data-source/package.json
@@ -34,7 +34,8 @@
   "dependencies": {
     "@tmagic/utils": "1.3.0-alpha.16",
     "@tmagic/schema": "1.3.0-alpha.16",
-    "events": "^3.3.0"
+    "events": "^3.3.0",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@types/events": "^3.0.0",
