--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       // 内部模块都指向 src/index.ts, 会有更好的代码跳转体验.
       "@tmagic/*": ["packages/*/src"],
       "@tmagic/tmagic-form-runtime": ["runtime/tmagic-form/src"],
+      "@tmagic/vue-runtime-help": ["runtime/vue-runtime-help/src"],
       "@editor/*": ["packages/editor/src/*"],
       "@form/*": ["packages/form/src/*"],
       "@data-source/*": ["packages/data-source/src/*"],
