--- a/packages/element-plus-adapter/package.json
+++ b/packages/element-plus-adapter/package.json
@@ -42,11 +42,11 @@
   "devDependencies": {
     "@types/node": "^18.19.0",
     "rimraf": "^3.0.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.5"
   },
   "peerDependencies": {
     "@tmagic/design": "workspace:*",
-    "element-plus": "^2.7.5",
+    "element-plus": ">=2.7.8",
     "typescript": "*"
   },
   "peerDependenciesMeta": {
