--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "reinstall": "pnpm clean:all && pnpm bootstrap",
     "test": "vitest run",
     "coverage": "vitest run --coverage",
-    "prepare": "husky install",
-    "commit": "git-cz",
+    "prepare": "husky",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "release": "node scripts/release.mjs"
   },
@@ -87,7 +86,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts,vue}": "eslint --fix --cache",
+    "*.{js,ts,vue}": "npm run lint-fix",
     "*.scss": "prettier --write"
   }
 }
